# newton

./: CMakeLists.txt
src/: main.cc
src/includes/: app.h  newton.hpp
src/source/: app.cc  newton.cc
